--- a/src/App.css
+++ b/src/App.css
@@ -2,3 +2,21 @@
     width: 100%;
     height: 100%;
 }
+@media screen and (max-width:768px) {
+    .content-box{
+        display:flex;
+        flex-direction: column-reverse;
+        justify-content: center;
+        align-items: center;
+    }
+}
+.img{
+    width:15rem;
+}
+@media screen and (max-width:400px)
+{
+    .img{
+        display: flex;
+        
+    }
+}
