--- a/src/App.css
+++ b/src/App.css
@@ -8,15 +8,21 @@
         flex-direction: column-reverse;
         justify-content: center;
         align-items: center;
+        text-align: center;
+        border-radius: 10px;
     }
 }
 .img{
     width:15rem;
+    margin-right:36px;
 }
 @media screen and (max-width:400px)
 {
     .img{
         display: flex;
+        width: fit-content;
+        height: fit-content;
+
         
     }
 }
